<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/base_padding"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:text="@string/main_title"
        android:textSize="@dimen/h1"
        android:textStyle="bold"
        android:layout_marginBottom="@dimen/default_margin"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginBottom="@dimen/header_margin">

        <TextView
            android:id="@+id/last_updated_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/last_updated_label"
            android:textStyle="italic"
            android:layout_marginEnd="@dimen/default_margin" />

        <TextView
            android:id="@+id/last_updated_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/unknown"
            android:textStyle="italic" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">

        <TextView
            android:id="@+id/lat_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/latitude_label"
            android:textSize="@dimen/p"
            android:textStyle="bold"
            android:layout_marginEnd="@dimen/default_margin" />

        <TextView
            android:id="@+id/lat_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/unknown"
            android:textSize="@dimen/p" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginBottom="@dimen/header_margin">

        <TextView
            android:id="@+id/lng_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/longitude_label"
            android:textSize="@dimen/p"
            android:textStyle="bold"
            android:layout_marginEnd="@dimen/default_margin" />

        <TextView
            android:id="@+id/lng_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/unknown"
            android:textSize="@dimen/p" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">

        <TextView
            android:id="@+id/status_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/status_label"
            android:textStyle="bold"
            android:layout_marginEnd="@dimen/default_margin"/>

        <TextView
            android:id="@+id/status_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/unknown"
            android:textStyle="italic" />

    </LinearLayout>

</LinearLayout>